Fixed missing colour in chat page top corner

--- a/ca4/public/css/demo.css
+++ b/ca4/public/css/demo.css
@@ -18,11 +18,6 @@
   font-style: normal;
 }
 
-  #chat-body {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, #00d4ff 100%);
-  }
-
   .outgoing__message {
     color: rgb(0, 119, 255);
     background-color:  rgba(255, 255, 255, 0.85);
@@ -81,12 +76,14 @@
     height: 100%;
     width: 149px;
     position: fixed;
-    z-index: 1;
     top: 0;
     left: 0px;
     background-color: #023152;
     overflow-x: hidden;
-    margin-top: 46px;
+  }
+
+  h4 {
+    padding-top: 30px;
   }
 
   /*make the active user text inherit style from container*/
@@ -131,12 +128,30 @@
   }
 
   #chatnav {
-    margin-left: -10px;
+    margin: 0px;
+    padding: 0px;
   }
 
-  #homenav {
-    margin-left: -10px;
-  } 
+  #chatnavul {
+    margin: 0px;
+    padding: 0px;
+  }
+
+  #chat-body {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, #00d4ff 100%);
+    padding: 32px;
+    margin: 0;
+  }
+
+  hr {
+  
+  }
+
+  nav {
+    margin: 0px;
+    padding: 0px;
+  }
 
   .nav-li {
     float: left;
